--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+// @import '../node_modules/swiper/swiper-bundle.css';
+@import 'swiper/swiper-bundle.css';
+
+swiper {
+    height: 300px;
+}
